<resources>

    <!--<string name="app_name">Azan</string>-->
    <string name="app_name">Azan</string>

    <string name="label_fajr">Fajr</string>
    <string name="label_dhuhr">Dhuhr</string>
    <string name="label_asr">Asr</string>
    <string name="label_maghrib">Maghrib</string>
    <string name="label_ishaa">Ishaa</string>
    <string name="label_shurooq">Shurooq</string>

    <string name="test_time">03:00</string>

    <string name="test_remaining_time">"Remaining 5 minutes"</string>

    <string name="no_connection_message">Please, Make your device online</string>
    <string name="retry_label">Retry</string>

    <string name="please_wait_message">Downloading data from the internet, please wait 2 minutes at most...</string>
    <string name="reach_to_max_message">you reached to max limit</string>
    <string name="reach_to_min_message">you reached to min limit</string>
    <string name="error_no_permission_granted_message">Permission is not granted, can not run the app</string>

    <string name="action_settings">Settings</string>
    <string name="label_settings">Settings</string>
    <string name="action_update_location">Update Location</string>

    <!-- ==== preferences string resources ==== -->

    <!-- for Azan audio preference -->
    <string name="pref_azan_audio_label">Azan Audio</string>
    <string name="pref_azan_audio_key" translatable="false">listen-option</string>

    <string name="pref_audio_label_full_azan">Full Azan</string>
    <string name="pref_audio_full_azan" translatable="false">audio-full-azan</string>

    <string name="pref_audio_label_takbeer">Takbeer</string>
    <string name="pref_audio_takbeer" translatable="false">audio-takbeer</string>

    <string name="pref_audio_label_none">None</string>
    <string name="pref_audio_none" translatable="false">no-audio</string>

    <string name="location_problem_title">Problem in finding your location</string>
    <string name="location_problem_message">There is no data stored in your device about your location, please make sure activating tracking location option in your device, then open google map app to make your device determine your location and cache it then reopen this app, thank you for your patient.</string>

    <!-- for Azan Calculation Method preference -->
    <string name="pref_calc_method_label">Azan Calculation Method</string>
    <string name="pref_calc_method_key" translatable="false">calc-method</string>
    <string name="pref_calc_method_default_value" translatable="false"></string>

    <string name="pref_calc_method_label_umm_al_qura">UMM Al Qura</string>
    <string name="pref_calc_method_umm_al_qura" translatable="false">umm-al-qura</string>

    <string name="pref_calc_method_label_egyptian_general_authority">Egyptian General Authority</string>
    <string name="pref_calc_method_egyptian_general_authority" translatable="false">egyptian-general-authority</string>

    <string name="pref_calc_method_label_kuwait">Kuwait</string>
    <string name="pref_calc_method_kuwait" translatable="false">kuwait</string>

    <string name="pref_calc_method_label_mwl">Muslim World League</string>
    <string name="pref_calc_method_mwl" translatable="false">muslim-world-league</string>

    <string name="pref_calc_method_label_isna">Islamic Society Of North America</string>
    <string name="pref_calc_method_isna" translatable="false">islam-society-north-america</string>

    <string name="pref_calc_method_label_islamic_university_karachi">Islamic University In Karachi</string>
    <string name="pref_calc_method_islamic_university_karachi" translatable="false">islamic-university-karachi</string>
    <string name="widget_error">ERR: tab the widget</string>
    <string name="failed_to_load_data">Sorry, Failed to load the data from the internet, please try again later</string>

    <string name="pref_time_format_label">Time Display Format</string>
    <string name="pref_time_format_key" translatable="false">time-format</string>
    <string name="pref_time_format_label_12_hour">12 Hour</string>
    <string name="pref_time_format_label_24_hour">24 Hour</string>
    <string name="pref_time_format_12_hour" translatable="false">12-hour</string>
    <string name="pref_time_format_24_hour" translatable="false">24-hour</string>

    <string name="label_eqamah">Eqamah</string>

    <!-- for Eqamah preference -->
    <string name="pref_eqamah_label">Eqamah After Azan (minutes)</string>
    <string name="pref_eqamah_key" translatable="false">eqamah-key</string>
    <string name="pref_eqamah_default_value" translatable="false">14</string>
    <string name="pref_eqamah_label_none">None</string>
    <string name="pref_eqamah_label_14">14</string>
    <string name="pref_eqamah_label_21">21</string>
    <string name="pref_eqamah_label_31">31</string>
    <string name="pref_eqamah_none" translatable="false">none</string>
    <string name="pref_eqamah_14" translatable="false">14</string>
    <string name="pref_eqamah_21" translatable="false">21</string>
    <string name="pref_eqamah_31" translatable="false">31</string>

    <!-- for Azan notification -->
    <string name="notification_channel_name">Azan Reminder</string>
    <string name="notification_channel_description">Azan Reminder Notifications</string>
    <string name="notification_problem_title">Notification Disabled</string>
    <string name="notification_problem_message">To get accurate alerts for Azans, Please enable notifications for this app.</string>


</resources>
