<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/pref_azan_audio_label"
        android:key="@string/pref_azan_audio_key"
        android:defaultValue="@string/pref_audio_takbeer"
        android:entries="@array/azan_audio_options"
        android:entryValues="@array/azan_audio_values" />

    <ListPreference
        android:title="@string/pref_calc_method_label"
        android:key="@string/pref_calc_method_key"
        android:defaultValue="@string/pref_calc_method_default_value"
        android:entries="@array/azan_calc_method_options"
        android:entryValues="@array/azan_calc_method_values" />

    <ListPreference
        android:title="@string/pref_time_format_label"
        android:key="@string/pref_time_format_key"
        android:defaultValue="@string/pref_time_format_12_hour"
        android:entries="@array/time_format_options"
        android:entryValues="@array/time_format_values" />

</PreferenceScreen>